SS_A1_10: fixed tab overflow

--- a/src/styles/layouts/_footer.scss
+++ b/src/styles/layouts/_footer.scss
@@ -132,7 +132,7 @@
     .company-details {
         margin: px-to-rem(62 0);
         display: flex;
-        min-width: px-to-rem(900);
+        width: 100%;
         justify-content: space-between;
 
         &__icon {
@@ -141,7 +141,7 @@
 
         &__container {
             margin: 0;
-            min-width: px-to-rem(277);
+            min-width: px-to-rem(150);
         }
 
         &__heading {
@@ -171,7 +171,7 @@
             display: block;
             position: absolute;
             top: px-to-rem(-100);
-            right: px-to-rem(-130);
+            right: px-to-rem(-113);
         }
 
         &__text {
@@ -185,10 +185,10 @@
     }
 
     .company-details {
-        margin-top: px-to-rem(30);
+        margin-top: px-to-rem(24);
         display: flex;
-        min-width: px-to-rem(580);
-        justify-content: space-between;
+        min-width: px-to-rem(560);
+        gap: px-to-rem(80);
 
         &__icon {
             display: none;
@@ -196,6 +196,7 @@
 
         &__container {
             margin: 0;
+            width: px-to-rem(120);
         }
 
         &__heading {
